# HU-V2CPSE2-Homework

./: .clang-format  CMakeLists.txt
factory/: CMakeLists.txt  ball.cpp  ball.hpp  entity.hpp  exceptions.hpp  factory.hpp  main.cpp  objects.txt  picture.cpp  picture.hpp  rectangle.cpp  rectangle.hpp  yeet.hpp  zorlo.txt
stl/: CMakeLists.txt  main.cpp
stuiter/: CMakeLists.txt  action.hpp  main.cpp  objects.hpp
tictac/: main.cpp  terminal_tictactoe.hpp  tictactoe.hpp
tictac2/: CMakeLists.txt  main.cpp  tictac.hpp
